--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 					<div id="main">
 
 						<!-- Featured Post -->
+						<head><title>Featured Post</title> </head>
 							<article class="post featured">
 								<header class="major">
 									<h2>Developed a fully functioning website for Alfis<br />
@@ -65,10 +66,11 @@
 							</article>
 
 						<!-- Posts -->
+						<head><title>Recent Posts</title> </head>
 							<section class="posts">
 								<article>
 									<header>
-										<h2>Created a website for Hotcake<br />
+										<h2>Hotcake<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/hotcake.jpg" alt="" /></a>
@@ -81,7 +83,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Created a website for KW ECO Block<br />
+										<h2>KW ECO Block<br />
 										</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/bricks.jfif" alt="" /></a>
@@ -94,7 +96,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Development of DocuSphere<br />
+										<h2>DocuSphere<br />
 										</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/docusphere.jfif" alt="" /></a>
@@ -105,7 +107,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Web development of Awethentica<br />
+										<h2>Awethentica<br />
 										</h2>
 									</header>
 									<a href="#" class="image fit"><img src="" alt="" /></a>
