--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-						<head><title>Featured Post</title> </head>
+						<h1></h1>Featured Post</title> </h1>
 							<article class="post featured">
 								<header class="major">
 									<h2>Developed a fully functioning website for Alfis<br />
@@ -66,7 +66,7 @@
 							</article>
 
 						<!-- Posts -->
-						<head><title>Recent Posts</title> </head>
+						<h1>Recent Posts</h1>
 							<section class="posts">
 								<article>
 									<header>
