--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-						<h1></h1>Featured Post</title> </h1>
+						<h1>Featured Post</h1>
 							<article class="post featured">
 								<header class="major">
 									<h2>Developed a fully functioning website for Alfis<br />
