--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 					</nav>
 
 				<!-- Main -->
+				<h1 style="text-align: center">Featured Post</h1>
 					<div id="main">
 
 						<!-- Featured Post -->
-						<h1>Featured Post</h1>
 							<article class="post featured">
 								<header class="major">
 									<h2>Developed a fully functioning website for Alfis<br />
@@ -66,7 +66,7 @@
 							</article>
 
 						<!-- Posts -->
-						<h1>Recent Posts</h1>
+						<h1 style="text-align: center">Recent Posts</h1>
 							<section class="posts">
 								<article>
 									<header>
