--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			.posts {
+				display: flex;
+				justify-content: center;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -46,7 +52,7 @@
 					</nav>
 
 				<!-- Main -->
-				<h1 style="text-align: center">Featured Post</h1>
+				<h1 class = "posts">Featured Post</h1>
 					<div id="main">
 
 						<!-- Featured Post -->
@@ -66,7 +72,7 @@
 							</article>
 
 						<!-- Posts -->
-						<h1 style="text-align: center">Recent Posts</h1>
+						<h1 class = "posts">Recent Posts</h1>
 							<section class="posts">
 								<article>
 									<header>
