--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										<h2>Awethentica<br />
 										</h2>
 									</header>
-									<a href="#" class="image fit"><img src="" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/accesory.jpg" alt="" /></a>
 									<p>Awethentica is a popular accessories store in Bangladesh. It mainly operates from Instagram, and is being well kept.
 										They offer many types of accessories spanning from, ear rings to bracelets. All of the accessories from Awethentica is hand crafted by its prestigious owner.
 										Their website is currently down due to unknown reasons, here is their instagram page.
@@ -122,6 +122,19 @@
 									<ul class="actions special">
 										<li><a href="https://www.instagram.com/awethentica/" class="button">View Instagram</a></li>
 										<li><a href="http://awethentica.biz" class="button">View Website</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>The DNA Lab<br />
+										</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/download.jfif" alt="" /></a>
+									<p>The DNA Lab is a prominent provider of genetic testing and research services, primarily operating online at thednalab.org. They offer a range of solutions, from health screenings to ancestry mapping, all handled with precision by their skilled team.
+									Their website is currently under maintenance, but their commitment to innovation and quality remains unwavering.
+									</p>
+									<ul class="actions special">
+										<li><a href="http://thednalab.org" class="button">View Website</a></li>
 									</ul>
 								</article>
 								<!--
