--- a/index.html
+++ b/index.html
@@ -1,33 +1,17 @@
 <!DOCTYPE HTML>
+<!--
+	Massively by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>Abdallah Galib's Portfolio</title>
+		<title>Abdallah Galib's Portofolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
-			html, body {
-				height: 100%;
-				margin: 0;
-				display: flex;
-				flex-direction: column;
-			}
-
-			#wrapper {
-				flex: 1;
-				display: flex;
-				flex-direction: column;
-			}
-
-			#footer {
-				margin-top: auto;
-				padding: 2rem 1rem;
-				background-color: #222;
-				color: #fff;
-				text-align: center;
-			}
-
 			.posts {
 				display: flex;
 				justify-content: center;
@@ -58,6 +42,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">My Websites</a></li>
+							<!--<li><a href="generic.html">Generic Page</a></li>-->
+							<!--<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/abdallah.galib.2024/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -72,7 +58,10 @@
 								<header class="major">
 									<h2>Developed a fully functioning website for Alfis<br />
 									</h2>
-									<p>In this project I developed a fully functioning store website for a large corporation, named AlfisLTD.</p>
+									<p>In this project I developed a fully functioning store website for a large corporation, named AlfisLTD.
+										This corporation sells many garments in and out of Bangladesh. Their garments are very high quality, spanning from Elastics to Tape. Their specialty is mainly elastics.
+										They have many factories across Bangladesh.
+									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/factory-1.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -81,23 +70,103 @@
 							</article>
 
 						<!-- Posts -->
-						<h1 class="posts">Recent Posts</h1>
+						<h1 class = "posts">Recent Posts</h1>
 							<section class="posts">
 								<article>
 									<header>
 										<h2>Hotcake<br />
-										</h2>
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/hotcake.jpg" alt="" /></a>
-									<p>A recent project in which I created a fully functioning website for a corporation named Hotcake.</p>
+									<p>A recent project in which I, created a fully functioning website for a corporation named Hotcake. Hotcake is based in Australia and ships many types of plants across Australia.
+										They are owned by a Bangladeshi living in Australia. Many features are still being added, and I am working my best.
+									</p>
 									<ul class="actions special">
 										<li><a href="https://hotcake.com.au/home/" class="button">View Website</a></li>
 									</ul>
 								</article>
-								<!-- Additional posts -->
+								<article>
+									<header>
+										<h2>KW ECO Block<br />
+										</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/bricks.jfif" alt="" /></a>
+									<p>Another large project I have done, in which i develop a fully functioning website for a corporation that is KW ECO block. KW ECO Block is a large brick producer that ships bricks across Bangladesh. 
+										They specialize in Hollow Bricks and many more variants of bricks. In the website it's a kind of brochure, since the bricks cannot be bought directly from the website because our client wanted the website to be designed like that.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://kwecoblock.com" class="button">View Website</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>DocuSphere<br />
+										</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/docusphere.jfif" alt="" /></a>
+									<p>Docusphere is a Consultation website, It mainly focuses on bureaucracy. The website was wanted by a man living in New Jersey, of Bangladeshi Origin. He wanted to make a consultation website that would help people build on land or sort out other lawful matters. Sadly the website isnt being maintained by my client and he isnt talking to us. Its a shadow of its former self, because our client repurposed it.</p>
+									<ul class="actions special">
+										<li><a href="http://documentexamples2.kesug.com/?i=1" class="button">View Website</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Awethentica<br />
+										</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/accesory.jpg" alt="" /></a>
+									<p>Awethentica is a popular accessories store in Bangladesh. It mainly operates from Instagram, and is being well kept.
+										They offer many types of accessories spanning from, ear rings to bracelets. All of the accessories from Awethentica is hand crafted by its prestigious owner.
+										Their website is currently down due to unknown reasons, here is their instagram page.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://www.instagram.com/awethentica/" class="button">View Instagram</a></li>
+										<li><a href="http://awethentica.biz" class="button">View Website</a></li>
+									</ul>
+								</article>
+								<!--
+								<article>
+									<header>
+										<h2><a href="#">Odio magna<br />
+										sed consectetur</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Augue lorem<br />
+										primis vestibulum</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
 							</section>
-					</div>
+							-->
 
+						<!-- Footer 
+							<footer>
+								<div class="pagination">
+									<a href="#" class="previous">Prev</a>
+									<a href="#" class="page active">1</a>
+									<a href="#" class="page">2</a>
+									<a href="#" class="page">3</a>
+									<span class="extra">&hellip;</span>
+									<a href="#" class="page">8</a>
+									<a href="#" class="page">9</a>
+									<a href="#" class="page">10</a>
+									<a href="#" class="next">Next</a>
+								</div>
+							</footer>
+
+					</div>
+				-->
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
@@ -122,6 +191,12 @@
 							</form>
 						</section>
 						<section class="split contact">
+							<!--
+							<section class="alt">
+								<h3>Address</h3>
+								<p>1234 Somewhere Road #87257<br />
+								Nashville, TN 00000-0000</p>
+							</section>-->
 							<section>
 								<h3>Phone</h3>
 								<p><a href="#">(+880) 15770-62454</a></p>
@@ -142,7 +217,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Abdallah Galib</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
