--- a/index.html
+++ b/index.html
@@ -124,18 +124,19 @@
 										<li><a href="http://awethentica.biz" class="button">View Website</a></li>
 									</ul>
 								</article>
-								<!--
 								<article>
 									<header>
-										<h2><a href="#">Odio magna<br />
+										<h2><a href="#">The DNA Lab<br />
 										sed consectetur</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/download.jfif" alt="" /></a>
+									<p>The DNA Lab is a prominent provider of genetic testing and research services, primarily operating online at thednalab.org. They offer a range of solutions, from health screenings to ancestry mapping, all handled with precision by their skilled team.
+
+Their website is currently under maintenance, but their commitment to innovation and quality remains unwavering.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
+								</article><!--
 								<article>
 									<header>
 										<h2><a href="#">Augue lorem<br />
