--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Their website is currently under maintenance, but their commitment to innovation
 							</section>
 							-->
 
-						<!-- Footer 
+						Footer 
 							<footer>
 								<div class="pagination">
 									<a href="#" class="previous">Prev</a>
@@ -167,7 +167,7 @@ Their website is currently under maintenance, but their commitment to innovation
 							</footer>
 
 					</div>
-				-->
+
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
