--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 Their website is currently under maintenance, but their commitment to innovation and quality remains unwavering.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://thednalab.kesug.com/?i=1" class="button">View Website</a></li>
 									</ul>
 								</article><!--
 								<article>
