--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">The DNA Lab<br />
-										sed consectetur</a></h2>
+										<h2>The DNA Lab</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/download.jfif" alt="" /></a>
 									<p>The DNA Lab is a prominent provider of genetic testing and research services, primarily operating online at thednalab.org. They offer a range of solutions, from health screenings to ancestry mapping, all handled with precision by their skilled team.
